# homeassistant-galaxie

./: .gitignore  CONTRIBUTING.md  HOMEA_ASSISTANT_GALAXIE_COMPONENT_PLAN_V2.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt  test_api.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  hacs-validation.yml
custom_components/galaxie/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device.py  manifest.json  sensor.py  websocket_client.py
custom_components/galaxie/translations/: en.json
docs/: installation.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_coordinator_websocket.py  test_sensor_diagnostic.py  test_sensor_new.py  test_websocket_client.py
